Tue Sep 13 09:18:54 2005  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * configure.ac:

          Fixed the autoconf test that checks for memcpy loop unrolling
          optimization, by (1) removing the testit function and replacing
          it with a function pointer, (2) by properly setting the right
          ACE macro when the test succeeds and (3) enabling the flag only
          when the test produces a result > 10% for all sizes between
          1..16.

Tue Sep 13 14:10:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * tests/Cached_Accept_Conn_Test.cpp:
        * tests/Cached_Conn_Test.cpp:
        * tests/Message_Block_Test.cpp:

	Fixed problems with explicit template instantiations and
	VxWorks builds.

Tue Sep 13 11:52:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * apps/JAWS2/JAWS/Cache_Manager_T.cpp:
        * examples/APG/Logging/LogManager.h:
        * examples/APG/Logging/Use_Multiple_Sinks.cpp:
        * examples/APG/Logging/Use_Ostream.cpp:
        * examples/C++NPv1/Logging_Client.cpp:
        * examples/C++NPv2/Select_Reactor_Logging_Server.cpp:
        * examples/C++NPv2/Server_Shutdown.cpp:
        * examples/C++NPv2/TP_Reactor_Logging_Server.cpp:
        * examples/Export/test.cpp:

        Fixed for environments defining ACE_USES_OLD_IOSTREAMS
        (which unfortunately is the case for Windows x64 at the
        moment due to shortcomings in the Platform SDK).

Tue Sep 13 10:30:00 UTC 2005  Simon Massey  <sma@prismtech.com>

        * bin/tao_orb_tests.lst:
          Added Bug_2234_Regression test.

Tue Sep 13 10:11:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * bin/tao_orb_tests.lst:
          Excluded a few tests based on 'IPV6' configuration because
          they use features which are not IPv6 compatible (yet) like
          SHMIOP.

Fri Sep  9 18:57:31 2005  Steve Huston  <shuston@riverace.com>

      	* ace/Sock_Connect.cpp (bind_port): Replace variable s_addr with