@@ -221,26 +221,26 @@ ACE_OS::fast_memcpy (void *t, const void *s, size_t len)
   const unsigned char* from = static_cast<const unsigned char*> (s) ;
   // Unroll the loop...
   switch (len)
-  {
-  case 16: to[15] = from[15];
-  case 15: to[14] = from[14];
-  case 14: to[13] = from[13];
-  case 13: to[12] = from[12];
-  case 12: to[11] = from[11];
-  case 11: to[10] = from[10];
-  case 10: to[9] = from[9];
-  case  9: to[8] = from[8];
-  case  8: to[7] = from[7];
-  case  7: to[6] = from[6];
-  case  6: to[5] = from[5];
-  case  5: to[4] = from[4];
-  case  4: to[3] = from[3];
-  case  3: to[2] = from[2];
-  case  2: to[1] = from[1];
-  case  1: to[0] = from[0];
-  case  0: return t;
-  default: return ::memcpy (t, s, len);
-  }
+    {
+    case 16: to[15] = from[15];
+    case 15: to[14] = from[14];
+    case 14: to[13] = from[13];
+    case 13: to[12] = from[12];
+    case 12: to[11] = from[11];
+    case 11: to[10] = from[10];
+    case 10: to[9] = from[9];
+    case  9: to[8] = from[8];
+    case  8: to[7] = from[7];
+    case  7: to[6] = from[6];
+    case  6: to[5] = from[5];
+    case  5: to[4] = from[4];
+    case  4: to[3] = from[3];
+    case  3: to[2] = from[2];
+    case  2: to[1] = from[1];
+    case  1: to[0] = from[0];
+    case  0: return t;
+    default: return ::memcpy (t, s, len);
+    }
 }
 #endif /* ACE_HAS_MEMCPY_LOOP_UNROLL */
 
@@ -324,7 +324,7 @@ ACE_OS::strsncpy (ACE_WCHAR_T *dst, const ACE_WCHAR_T *src, size_t maxlen)
   register const ACE_WCHAR_T *rsrc = src;
   register size_t rmaxlen = maxlen;
 
-    if (rmaxlen > 0)
+  if (rmaxlen > 0)
     {
       if (rdst!=rsrc)
         {
@@ -351,7 +351,7 @@ ACE_OS::strspn_emulation (const char *string,
   wchar_t c, sc;
 
   // Skip any characters in charset, excluding the terminating \0.
-cont:
+ cont:
   c = *p++;
   for (spanp = charset; (sc = *spanp++) != 0;)
     if (sc == c)
