@@ -1,3 +1,9 @@
+Tue Sep 13 09:30:03 2005  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>
+
+        * ace/OS_NS_string.{h,cpp,inl}:
+          Updated the loop unrolled memcpy version name to fast_memcpy
+          rather than smemcpy.
+
 Tue Sep 13 09:18:54 2005  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>
 
         * configure.ac:
